# IRIS-FLOWER-MLOps

./: .gitignore  Dockerfile.jenkins  GITHUB_JENKINS_INTEGRATION.md  JENKINS_SETUP.md  Jenkinsfile  MLFLOW_GUIDE.md  PROMETHEUS_GRAFANA_GUIDE.md  QUICK_REFERENCE.md  README.md  SETUP_SUMMARY.md  docker-compose.jenkins.yml  docker-compose.yml  jenkins-setup.sh
api/: Dockerfile  main.py  model.pkl  pyproject.toml  test_main.py
api/templates/: index.html  show-result.html
db/: .gitignore  Dockerfile  main.py  pyproject.toml  test_main.py
grafana/dashboards/: dashboard.yml  iris-mlops-dashboard.json
prometheus/: prometheus.yml
